--- a/pdfman/app.conf
+++ b/pdfman/app.conf
@@ -5,4 +5,7 @@
   groff => "env GROFF_TMAC_PATH=. PREPRODEBUG=3 groff -Tpdf -P-d -mandoc -k -t",
   groff_ja => "env GROFF_TMAC_PATH=. PREPRODEBUG=3 groff -Tpdf -P-d -mandoc -mja -k -t",
   #gs => "gs -sDEVICE=pdfwrite -dPrinted=false -dNOPAUSE -dQUIET -dBATCH -sOutputFile=- -",
+  #tp_more => 'prepro-tp-more',
+  #tp_end => 'prepro-tp-end',
+  force => 1,
 }
