fix tp label with j

--- a/pdfman/app.conf
+++ b/pdfman/app.conf
@@ -1,11 +1,9 @@
 {
   lang => 'ja',
   iconv_ja => "nkf -w",
-  env => "",
-  groff => "env GROFF_TMAC_PATH=. PREPRODEBUG=3 groff -Tpdf -P-d -mandoc -k -t",
-  groff_ja => "env GROFF_TMAC_PATH=. PREPRODEBUG=3 groff -Tpdf -P-d -mandoc -mja -k -t",
+  groff => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -mandoc -k -t",
+  groff_ja => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -mandoc -mja -k -t -p",
   #gs => "gs -sDEVICE=pdfwrite -dPrinted=false -dNOPAUSE -dQUIET -dBATCH -sOutputFile=- -",
-  #tp_more => 'prepro-tp-more',
-  #tp_end => 'prepro-tp-end',
-  force => 1,
+  #force => 1,
+  issues => '/vagrant/pdfman/issues.t',
 }
