--- a/pdfman/app.conf
+++ b/pdfman/app.conf
@@ -1,8 +1,8 @@
 {
   lang => 'ja',
   iconv_ja => "nkf -w",
-  groff => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -P-yU -mandoc -k -t",
-  groff_ja => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -P-yU -mandoc -mja -k -t -p",
+  groff => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -P-yU -P-pa4 -dpaper=a4 -mandoc -k -t",
+  groff_ja => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -P-yU -P-pa4 -dpaper=a4 -mandoc -mja -k -t -p",
   #gs => "gs -sDEVICE=pdfwrite -dPrinted=false -dNOPAUSE -dQUIET -dBATCH -sOutputFile=- -",
   #force => 1,
   issues => '/vagrant/pdfman/issues.t',
