avoid using both "名称" and "名前" in mdoc

--- a/pdfman/app.conf
+++ b/pdfman/app.conf
@@ -1,6 +1,8 @@
 {
   lang => 'ja',
   iconv_ja => "nkf -w",
+  # perl -CIO -lpe 's/\\\[u([0-9A-F]+)\]/pack "U*", hex $1/eg' $GROFF_TMAC/mdoc/ja.UTF-8
+  fixes_ja => sub { s/^(\.\s*Sh\s+)(名称|名前)$/${1}\\*\[doc-section-name\]/ && last for @{ref $_[0] ? $_[0] : \@_} },
   groff => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -P-yU -P-pa4 -dpaper=a4 -mandoc -k -t",
   groff_ja => "env GROFF_TMAC_PATH=. groff -Tpdf -P-d -P-yU -P-pa4 -dpaper=a4 -mandoc -mja -k -t -p",
   #gs => "gs -sDEVICE=pdfwrite -dPrinted=false -dNOPAUSE -dQUIET -dBATCH -sOutputFile=- -",
